--- a/src/SarifWeb/Views/Shared/_Layout.cshtml
+++ b/src/SarifWeb/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +29,7 @@
 <body>
     <div id="pageContainer">
         <header role="banner" aria-label="Header">
-            <div role="heading" class="header-site-title">
+            <div class="header-site-title">
                 <a id="headerHomeLink" href="~/">SARIF</a>
             </div>
             <div role="note" aria-label="Beta website" class="header-version-badge">WEB BETA</div>
