--- a/src/SarifWeb/Content/Frame-Media-Tablet.css
+++ b/src/SarifWeb/Content/Frame-Media-Tablet.css
@@ -18,7 +18,7 @@ button.sarifweb-button:not([disabled]):hover, button.sarifweb-button:active {
 }
 
 #headerNavValidator {
-    margin-right: 15px;
+    display: none;
 }
 
 footer {
