Work in progress

--- a/src/SarifWeb/Scripts/jqueryui/themes/redmond/theme.css
+++ b/src/SarifWeb/Scripts/jqueryui/themes/redmond/theme.css
@@ -16,17 +16,17 @@
 ----------------------------------*/
 .ui-widget {
 	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
-	font-size: 1em;
+	font-size:.9em;
 }
 .ui-widget .ui-widget {
-	font-size: 1em;
+	font-size:.9em;
 }
 .ui-widget input,
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
 	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
-	font-size: 1em;
+	font-size:.9em;
 }
 .ui-widget.ui-widget-content {
 	border: 1px solid #cccccc;
