--- a/src/SarifWeb/Content/Validator.css
+++ b/src/SarifWeb/Content/Validator.css
@@ -24,26 +24,12 @@
 
 #validatorToolbar button {
     margin-left: 3px;
-}
-
-#validatorToolbar button > * {
-    margin-bottom: -3px;
-    margin-top: 3px;
+    padding: 6px 6px 2px 6px;;
 }
 
 #leftSide {
     align-items: flex-start;
     flex: 1;
-}
-
-#downloadLog,
-#revalidate {
-    display: flex;
-}
-
-#downloadLog img,
-#revalidate img {
-    margin-right: 5px;
 }
 
 #resultPosition,
@@ -69,6 +55,36 @@
 #resultPositionSeparator {
     margin-left: 2px;
     margin-right: 2px;
+}
+
+#utilitiesMenu {
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+    display: none;
+    position: absolute;
+}
+
+#utilitiesMenu .ui-menu {
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+}
+
+#utilitiesMenu .ui-widget-header div {
+    padding-left: 5px;
+}
+
+#utilitiesMenu > .ui-menu-item {
+    font-weight: bold;
+}
+
+#utilitiesMenu .ui-menu-item-wrapper {
+    white-space: nowrap;
+}
+
+#utilitiesMenu .menu-check-hidden {
+    visibility: hidden;
+}
+
+#utilitiesMenu .selected-theme .ui-icon {
+    visibility: visible;
 }
 
 #editor {
