--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -30,7 +30,7 @@
                 <div id="ruleDescription"></div>
             </div>
             <div id="rightSide">
-                <button id="prevResult" aria-label="Previous result" disabled>
+                <button id="prevResultButton" aria-label="Previous result" disabled>
                     <img src="~/Images/prev.png" alt="Previous result" />
                 </button>
                 <div id="resultPosition">
@@ -38,18 +38,66 @@
                     <div id="resultPositionSeparator" aria-label="of">/</div>
                     <div id="resultPositionCount">0</div>
                 </div>
-                <button id="nextResult" aria-label="Next result" disabled>
+                <button id="nextResultButton" aria-label="Next result" disabled>
                     <img src="~/Images/next.png" alt="Next result" />
                 </button>
-                <button id="downloadLog" aria-label="Download log file" disabled>
+                <button id="downloadLogButton" aria-label="Download log file" disabled>
                     <img src="~/Images/download.png" alt="Download icon" />
-                    <div>Download</div>
                 </button>
-                <button id="revalidate" aria-label="Re-validate log file" disabled>
+                <button id="revalidateButton" aria-label="Re-validate log file" disabled>
                     <img src="~/Images/reload.png" alt="Reload icon" />
-                    <div>Re-validate</div>
+                </button>
+                <button id="utilitiesButton" aria-label="Utilities" >
+                    <img src="~/Images/cog.png" alt="Cog icon" />
                 </button>
             </div>
+            <ul id="utilitiesMenu">
+                <li><div>Download validation results</div></li>
+                <li>
+                    <div>Editor color themes</div>
+                    <ul id="utilitiesMenuThemesFlyout">
+                        <li class="ui-widget-header"><div>Light</div></li>
+                            <li data-value="ace/theme/chrome"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Chrome</div></li>
+                            <li data-value="ace/theme/clouds"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Clouds</div></li>
+                            <li data-value="ace/theme/crimson_editor"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Crimson Editor</div></li>
+                            <li data-value="ace/theme/dawn"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Dawn</div></li>
+                            <li data-value="ace/theme/dreamweaver"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Dreamweaver</div></li>
+                            <li data-value="ace/theme/eclipse"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Eclipse</div></li>
+                            <li data-value="ace/theme/github"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>GitHub</div></li>
+                            <li data-value="ace/theme/iplastic"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>IPlastic</div></li>
+                            <li data-value="ace/theme/katzenmilch"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>KatzenMilch</div></li>
+                            <li data-value="ace/theme/kuroir"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Kuroir</div></li>
+                            <li data-value="ace/theme/solarized_light"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Solarized Light</div></li>
+                            <li data-value="ace/theme/sqlserver"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>SQL Server</div></li>
+                            <li data-value="ace/theme/textmate"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>TextMate</div></li>
+                            <li data-value="ace/theme/tomorrow"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Tomorrow</div></li>
+                            <li data-value="ace/theme/xcode"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>XCode</div></li>
+                        <li class="ui-widget-header"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Dark</div></li>
+                            <li data-value="ace/theme/ambiance"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Ambiance</div></li>
+                            <li data-value="ace/theme/chaos"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Chaos</div></li>
+                            <li data-value="ace/theme/clouds_midnight"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Clouds Midnight</div></li>
+                            <li data-value="ace/theme/cobalt"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Cobalt</div></li>
+                            <li data-value="ace/theme/dracula"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Dracula</div></li>
+                            <li data-value="ace/theme/gob"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Green on Black</div></li>
+                            <li data-value="ace/theme/gruvbox"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Gruvbox</div></li>
+                            <li data-value="ace/theme/idle_fingers"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>idle Fingers</div></li>
+                            <li data-value="ace/theme/kr_theme"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>krTheme</div></li>
+                            <li data-value="ace/theme/merbivore"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Merbivore</div></li>
+                            <li data-value="ace/theme/merbivore_soft"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Merbivore Soft</div></li>
+                            <li data-value="ace/theme/mono_industrial"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Mono Industrial</div></li>
+                            <li data-value="ace/theme/monokai"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Monokai</div></li>
+                            <li data-value="ace/theme/pastel_on_dark"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Pastel on dark</div></li>
+                            <li data-value="ace/theme/solarized_dark"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Solarized Dark</div></li>
+                            <li data-value="ace/theme/terminal"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Terminal</div></li>
+                            <li data-value="ace/theme/tomorrow_night"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Tomorrow Night</div></li>
+                            <li data-value="ace/theme/tomorrow_night_blue"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Tomorrow Night Blue</div></li>
+                            <li data-value="ace/theme/tomorrow_night_bright"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Tomorrow Night Bright</div></li>
+                            <li data-value="ace/theme/tomorrow_night_eighties"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Tomorrow Night 80s</div></li>
+                            <li data-value="ace/theme/twilight"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Twilight</div></li>
+                            <li data-value="ace/theme/vibrant_ink"><div><span class="ui-icon ui-icon-check menu-check-hidden"></span>Vibrant Ink</div></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div id="editor" role="textbox" aria-label="Log file editor"></div>
         <div id="validatorFooter">
@@ -63,22 +111,22 @@
                     <option value="ace/theme/eclipse">Eclipse</option>
                     <option value="ace/theme/github">GitHub</option>
                     <option value="ace/theme/iplastic">IPlastic</option>
+                    <option value="ace/theme/katzenmilch">KatzenMilch</option>
+                    <option value="ace/theme/kuroir">Kuroir</option>
                     <option value="ace/theme/solarized_light">Solarized Light</option>
+                    <option value="ace/theme/sqlserver" selected>SQL Server</option>
                     <option value="ace/theme/textmate">TextMate</option>
                     <option value="ace/theme/tomorrow">Tomorrow</option>
                     <option value="ace/theme/xcode">XCode</option>
-                    <option value="ace/theme/kuroir">Kuroir</option>
-                    <option value="ace/theme/katzenmilch">KatzenMilch</option>
-                    <option value="ace/theme/sqlserver" selected>SQL Server</option>
                 </optgroup>
                 <optgroup label="Dark">
                     <option value="ace/theme/ambiance">Ambiance</option>
                     <option value="ace/theme/chaos">Chaos</option>
                     <option value="ace/theme/clouds_midnight">Clouds Midnight</option>
-                    <option value="ace/theme/dracula">Dracula</option>
                     <option value="ace/theme/cobalt">Cobalt</option>
-                    <option value="ace/theme/gruvbox">Gruvbox</option>
+                    <option value="ace/theme/dracula">Dracula</option>
                     <option value="ace/theme/gob">Green on Black</option>
+                    <option value="ace/theme/gruvbox">Gruvbox</option>
                     <option value="ace/theme/idle_fingers">idle Fingers</option>
                     <option value="ace/theme/kr_theme">krTheme</option>
                     <option value="ace/theme/merbivore">Merbivore</option>
@@ -117,10 +165,14 @@
             var ruleList = $("#ruleList").selectmenu();
             var resultPositionCurrentText = $("#resultPositionCurrent");
             var resultPositionCountText = $("#resultPositionCount");
-            var prevResultButton = $("#prevResult").button();
-            var nextResultButton = $("#nextResult").button();
-            var downloadButton = $("#downloadLog").button();
-            var revalidateButton = $("#revalidate").button();
+            var prevResultButton = $("#prevResultButton").button();
+            var nextResultButton = $("#nextResultButton").button();
+            var downloadButton = $("#downloadLogButton").button();
+            var revalidateButton = $("#revalidateButton").button();
+            var utilitiesButton = $("#utilitiesButton").button();
+            var utilitiesMenu = $("#utilitiesMenu").menu({
+                items: "> :not(.ui-widget-header)"
+            }).hide();
 
             var theme = getCookie("editorTheme");
             theme = theme ? theme : "ace/theme/sqlserver";
@@ -462,7 +514,30 @@
                         alert(error);
                     }
                 });
-            })
+            });
+
+            $(utilitiesButton).button().on("click", function () {
+                $(utilitiesMenu).show().position({
+                    my: "left top",
+                    at: "left bottom",
+                    of: this,
+                    collision: "flip fit"
+                });
+
+                $("#utilitiesMenuThemesFlyout").position({
+                    collision: "flip fit"
+                })
+
+                $(document).on("click", function () {
+                    $(utilitiesMenu).hide();
+                }).on("keyup", function (e) {
+                    if (e.key == "Escape") {
+                        $(utilitiesMenu).hide();
+                    }
+                });
+
+                return false;
+            });
 
             $(themeList).on("selectmenuchange", function () {
                 var theme = $(this).val();
@@ -488,6 +563,7 @@
             });
 
             $dropForm.on("click", function (e) {
+                $dropForm.blur();
                 $fileInput[0].click();
             })
             .on("keypress", function (e) {
