--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -6,6 +6,8 @@
 <link href="~/Scripts/jqueryui/themes/redmond/jquery-ui.min.css" rel="stylesheet" />
 <link href="~/Scripts/jqueryui/themes/redmond/theme.min.css" rel="stylesheet" />
 <link href="~/Scripts/jqueryui/jquery-ui.structure.css" rel="stylesheet" />
+<link href="~/Scripts/jqueryui/jquery-ui-1.12.icon-font.min.css" rel="stylesheet" />
+<link href="~/Content/Loader.css" rel="stylesheet" />
 <link href="~/Content/Validator.css" rel="stylesheet" />
 
 <section id="dropSection" class="content-section gray-section">
@@ -14,7 +16,16 @@
     <form id="dropForm" role="region" aria-dropeffect="execute" aria-label="Click to browse for your log file" tabindex="0" method="post" action="@Url.Action("ValidateFilesAsync")" class="drop-area">
         <input id="fileInput" name="postedFiles" type="file" style="display: none;">
         <div class="drop-area-text drop-area-text-input">Drop your SARIF file here or click to browse</div>
-        <div class="drop-area-text drop-area-text-busy">Validating&hellip;</div>
+        <div class="drop-area-text drop-area-text-busy">
+            <div class="drop-area-busy">
+                <div id="looper">
+                    <div class="loader">Loading...</div>
+                </div>
+                <div id="busyText">
+                    Validating&hellip;
+                </div>
+            </div>
+        </div>
         <div class="drop-area-text drop-area-text-complete">Validation complete!</div>
         <div class="drop-area-text drop-area-text-error">Error</div>
     </form>
@@ -31,7 +42,7 @@
             </div>
             <div id="rightSide">
                 <button id="prevResultButton" aria-label="Previous result" disabled>
-                    <img src="~/Images/prev.png" alt="Previous result" />
+                    <span class="ui-icon ui-icon-caret-1-n">icon</span>
                 </button>
                 <div id="resultPosition">
                     <div id="resultPositionCurrent" aria-label="Result number">0</div>
@@ -39,16 +50,16 @@
                     <div id="resultPositionCount">0</div>
                 </div>
                 <button id="nextResultButton" aria-label="Next result" disabled>
-                    <img src="~/Images/next.png" alt="Next result" />
+                    <span class="ui-icon ui-icon-caret-1-s">icon</span>
                 </button>
                 <button id="downloadLogButton" aria-label="Download log file" disabled>
-                    <img src="~/Images/download.png" alt="Download icon" />
+                    <span class="ui-icon ui-icon-download">icon</span>
                 </button>
                 <button id="revalidateButton" aria-label="Re-validate log file" disabled>
-                    <img src="~/Images/reload.png" alt="Reload icon" />
+                    <span class="ui-icon ui-icon-arrowrefresh-1-e">icon</span>
                 </button>
-                <button id="utilitiesButton" aria-label="Utilities" >
-                    <img src="~/Images/cog.png" alt="Cog icon" />
+                <button id="utilitiesButton" aria-label="Utilities" disabled>
+                    <span class="ui-icon ui-icon-gear">icon</span>
                 </button>
             </div>
             <ul id="utilitiesMenu">
@@ -101,49 +112,6 @@
         </div>
         <div id="editor" role="textbox" aria-label="Log file editor"></div>
         <div id="validatorFooter">
-            <select id="themeList" role="combobox" aria-label="Editor color theme" disabled>
-                <optgroup label="Light">
-                    <option value="ace/theme/chrome">Chrome</option>
-                    <option value="ace/theme/clouds">Clouds</option>
-                    <option value="ace/theme/crimson_editor">Crimson Editor</option>
-                    <option value="ace/theme/dawn">Dawn</option>
-                    <option value="ace/theme/dreamweaver">Dreamweaver</option>
-                    <option value="ace/theme/eclipse">Eclipse</option>
-                    <option value="ace/theme/github">GitHub</option>
-                    <option value="ace/theme/iplastic">IPlastic</option>
-                    <option value="ace/theme/katzenmilch">KatzenMilch</option>
-                    <option value="ace/theme/kuroir">Kuroir</option>
-                    <option value="ace/theme/solarized_light">Solarized Light</option>
-                    <option value="ace/theme/sqlserver" selected>SQL Server</option>
-                    <option value="ace/theme/textmate">TextMate</option>
-                    <option value="ace/theme/tomorrow">Tomorrow</option>
-                    <option value="ace/theme/xcode">XCode</option>
-                </optgroup>
-                <optgroup label="Dark">
-                    <option value="ace/theme/ambiance">Ambiance</option>
-                    <option value="ace/theme/chaos">Chaos</option>
-                    <option value="ace/theme/clouds_midnight">Clouds Midnight</option>
-                    <option value="ace/theme/cobalt">Cobalt</option>
-                    <option value="ace/theme/dracula">Dracula</option>
-                    <option value="ace/theme/gob">Green on Black</option>
-                    <option value="ace/theme/gruvbox">Gruvbox</option>
-                    <option value="ace/theme/idle_fingers">idle Fingers</option>
-                    <option value="ace/theme/kr_theme">krTheme</option>
-                    <option value="ace/theme/merbivore">Merbivore</option>
-                    <option value="ace/theme/merbivore_soft">Merbivore Soft</option>
-                    <option value="ace/theme/mono_industrial">Mono Industrial</option>
-                    <option value="ace/theme/monokai">Monokai</option>
-                    <option value="ace/theme/pastel_on_dark">Pastel on dark</option>
-                    <option value="ace/theme/solarized_dark">Solarized Dark</option>
-                    <option value="ace/theme/terminal">Terminal</option>
-                    <option value="ace/theme/tomorrow_night">Tomorrow Night</option>
-                    <option value="ace/theme/tomorrow_night_blue">Tomorrow Night Blue</option>
-                    <option value="ace/theme/tomorrow_night_bright">Tomorrow Night Bright</option>
-                    <option value="ace/theme/tomorrow_night_eighties">Tomorrow Night 80s</option>
-                    <option value="ace/theme/twilight">Twilight</option>
-                    <option value="ace/theme/vibrant_ink">Vibrant Ink</option>
-                </optgroup>
-            </select>
         </div>
     </div>
 </section>
@@ -176,11 +144,7 @@
 
             var theme = getCookie("editorTheme");
             theme = theme ? theme : "ace/theme/sqlserver";
-            var themeList = $("#themeList")
-                .selectmenu()
-                .val(theme)
-                .selectmenu("refresh")
-                .selectmenu("option", "position", { my: "left bottom", at: "left top", collision: "fit" });
+            $("#utilitiesMenuThemesFlyout li[data-value='" + theme + "']").addClass("selected-theme");
 
             // Rules dictionary: key = rule ID, value = { description, results[ { line } ] }
             var rulesDictionary = {};
@@ -304,7 +268,7 @@
                     reader.onload = function () {
                         editor = ace.edit("editor", {
                             mode: "ace/mode/json",
-                            theme: $(themeList).val(),
+                            theme: $("#utilitiesMenuThemesFlyout li.selected-theme").attr("data-value"),
                             selectionStyle: "text",
                             showPrintMargin: false
                         });
@@ -354,7 +318,6 @@
                     $(button).button(verb);
                 });
                 $(ruleList).selectmenu(verb);
-                $(themeList).selectmenu(verb);
             }
 
             function clearRuleList() {
@@ -440,7 +403,7 @@
                 });
 
                 $("#ruleDescription").text(currentRule.description);
-                
+
                 setTimeout(function () {
                     editor.gotoLine(currentRule.results[0].line, 0, true);
                 }, 0);
@@ -521,12 +484,9 @@
                     my: "left top",
                     at: "left bottom",
                     of: this,
-                    collision: "flip fit"
+                    collision: "flip flip",
+                    within: "#validatorContainer"
                 });
-
-                $("#utilitiesMenuThemesFlyout").position({
-                    collision: "flip fit"
-                })
 
                 $(document).on("click", function () {
                     $(utilitiesMenu).hide();
@@ -539,8 +499,10 @@
                 return false;
             });
 
-            $(themeList).on("selectmenuchange", function () {
-                var theme = $(this).val();
+            $(utilitiesMenu).on("menuselect", function (e, ui) {
+                $("#utilitiesMenuThemesFlyout li.selected-theme").removeClass("selected-theme");
+                var theme = ui.item.attr("data-value");
+                ui.item.addClass("selected-theme");
                 editor.setTheme(theme);
                 setCookie("editorTheme", theme, 365 * 10);
             });
