--- a/src/SarifWeb/Content/Validator.css
+++ b/src/SarifWeb/Content/Validator.css
@@ -58,6 +58,7 @@
     align-items: center;
     display: flex;
     justify-content: flex-start;
+    user-select: none;
 }
 
 #resultPositionSeparator {
