--- a/src/SarifWeb/Content/Frame.css
+++ b/src/SarifWeb/Content/Frame.css
@@ -1,6 +1,7 @@
 ﻿:root {
     --main-border-radius: 5px;
     --content-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --menu-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
 }
 
 html, body {
