--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -35,14 +35,11 @@
 <section id="validatorSection" role="region" aria-labelledby="pageTitle" class="content-section gray-section">
     <div id="validatorContainer">
         <div id="validatorToolbar" data-disabled>
-            <div id="rulesToolbar">
+            <div id="leftToolbarGroup">
                 <select id="ruleList" role="combobox" aria-label="Rule list" multiple size="1" disabled>
                     <option value=""></option>
                 </select>
-                <div id="ruleDescription"></div>
-            </div>
-            <div id="buttonsToolbar">
-                <button id="prevResultButton" aria-label="Previous result" disabled>
+                <button id="prevResultButton" aria-label="Previous result" class="toolbar-button" disabled>
                     <span class="ui-icon ui-icon-caret-1-n">icon</span>
                 </button>
                 <div id="resultPosition">
@@ -50,16 +47,19 @@
                     <div id="resultPositionSeparator" aria-label="of">/</div>
                     <div id="resultPositionCount">0</div>
                 </div>
-                <button id="nextResultButton" aria-label="Next result" disabled>
+                <button id="nextResultButton" aria-label="Next result" class="toolbar-button" disabled>
                     <span class="ui-icon ui-icon-caret-1-s">icon</span>
                 </button>
-                <button id="downloadLogButton" aria-label="Download log file" disabled>
+                <div id="ruleDescription"></div>
+            </div>
+            <div id="rightToolbarGroup">
+                <button id="downloadLogButton" aria-label="Download log file" class="toolbar-button" disabled>
                     <span class="ui-icon ui-icon-download">icon</span>
                 </button>
-                <button id="revalidateButton" aria-label="Re-validate log file" disabled>
+                <button id="revalidateButton" aria-label="Re-validate log file" class="toolbar-button" disabled>
                     <span class="ui-icon ui-icon-arrowrefresh-1-e">icon</span>
                 </button>
-                <button id="utilitiesButton" aria-label="Utilities" disabled>
+                <button id="utilitiesButton" aria-label="Utilities" class="toolbar-button" disabled>
                     <span class="ui-icon ui-icon-gear">icon</span>
                 </button>
             </div>
@@ -139,22 +139,20 @@
                 uncheckAllText: "Clear all",
                 noneSelectedText: "Select rules",
                 selectedText: "# rule(s) selected",
-                beforeclose: function (e) {
-                    var sender = e.target;
+                beforeclose: function () {
+                    currentRules = [];
+                    currentResults = [];
                     var count = 0;
 
-                    for (var i = 0; i < sender.options.length; i++) {
-                        var option = sender.options[i];
-                        if (option.selected && option.value != "") {
-                            var ruleId = option.value;
-                            currentRules.push(rulesDictionary[ruleId]);
-                        }
-                    }
+                    $.each($(this).multiselect("getChecked"), function (index, option) {
+                        var ruleId = option.value;
+                        currentRules.push(rulesDictionary[ruleId]);
+                    });
 
                     clearLineMarkers();
 
                     if (currentRules.length > 0) {
-                        // We need to sort all results by line number, so we'll pull them into a local array
+                        // We need to sort all results by line number, so we'll pull them into a separate array
                         currentRules.forEach(function (rule) {
                             rule.results.forEach(function (result) {
                                 currentResults.push({ ruleId: rule.id, line: result.line });
@@ -257,7 +255,7 @@
 
                             // Clear the dropdown, then add the rules and trigger a change event
                             clearRuleList();
-                            $(ruleList).append(options.join("")).multiselect("refresh");
+                            $(ruleList).append(options.join("")).multiselect("refresh").multiselect("checkAll").multiselect("close");
                         }
                     }
                 }
@@ -266,6 +264,7 @@
                     rulesDictionary = {};
                     clearRuleList();
                     setResultPositionText(0, 0);
+                    setToolbarEnabled(false);
                     clearLineMarkers();
                     currentResultIndex = -1;
 
@@ -364,7 +363,7 @@
                     $(toolbar).attr("data-disabled");
                 }
 
-                $("#buttonsToolbar button" + selector).each(function (index, button) {
+                $("#validatorToolbar .toolbar-button" + selector).each(function (index, button) {
                     $(button).button(verb);
                 });
                 $(ruleList).multiselect(verb);
