--- a/src/SarifWeb/Content/Validator.css
+++ b/src/SarifWeb/Content/Validator.css
@@ -38,6 +38,14 @@
     padding-right: 5px;
 }
 
+.ui-multiselect-header {
+    padding: 3px 0 1px 1px;
+}
+
+.ui-multiselect-close {
+    display: none;
+}
+
 #validatorToolbar .toolbar-button {
     margin-left: 3px;
     padding: .4em .2em;
